# AVL-C

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: FindCheck.cmake
src/: CMakeLists.txt  avl.c  avl.h
tests/: CMakeLists.txt  avl_test_combos.c  avl_test_funcs.c  avl_test_utils.c  avl_test_utils.h
